# x2cli

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: snap.yaml
snap/: snapcraft.yaml
x2cli/: x2cli.py
x2cli/templates/command/: command.py.j2  command__init__.py.j2  verb.py.j2  verb__init__.py.j2
x2cli/templates/x2cli/: README.md.j2  pyproject.toml.j2  tox.ini.j2
x2cli/templates/x2cli/completion/: x2cli-argcomplete.bash.j2  x2cli-argcomplete.zsh.j2
x2cli/templates/x2cli/src/x2cli/: __init__.py.j2  argsutils.py.j2  cli.py.j2  entry_points.py.j2  helpers.py.j2  plugin_system.py.j2
x2cli/templates/x2cli/src/x2cli/command/: __init__.py.j2  extension_points.py.j2  extensions.py.j2
x2cli/templates/x2cli/src/x2cli/verb/: __init__.py.j2
x2cli/templates/x2cli/x2cli/: cli.py.j2  entry_points.py.j2  helpers.py.j2  logging.py.j2  plugin_system.py.j2
x2cli/templates/x2cli/x2cli/command/: __init__.py.j2  extension_points.py.j2  extensions.py.j2
x2cli/templates/x2cli/x2cli/verb/: __init__.py.j2
